# gatewayservice

./: README.md  manage.py  pyproject.toml
apigateway/: admin.py  models.py  views.py
apigateway/migrations/: 0001_initial.py
apigatewayservice/: asgi.py  settings.py  urls.py  wsgi.py
